--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,20 +1,9 @@
-// @font-face {
-//   font-family: "AvenirNext";
-//   src: url("../../assets/fonts/AvenirNextLTPro-Bold.otf") format("opentype");
-//   font-weight: 700;
-// }
-// @font-face {
-//   font-family: "AvenirNext";
-//   src: url("../../assets/fonts/AvenirNextLTPro-Regular.otf") format("opentype");
-//   font-weight: 400;
-// }
-// @font-face {
-//   font-family: "AvenirNext";
-//   src: url("../../assets/fonts/AvenirNextLTPro-Demi.otf") format("opentype");
-//   font-weight: 600;
-// }
 @font-face {
   font-family: "Abel";
   src: url("../../assets/fonts/Abel-Regular.ttf") format("truetype");
   font-weight: 400;
+}
+
+body {
+  font-family: "Abel";
 }
