--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -27,7 +27,14 @@
 
     &-container {
       display: flex;
+      flex-direction: column;
       justify-content: center;
+
+      & p {
+        padding: 1em;
+        font-size: 1.2em;
+        text-align: justify;
+      }
     }
   }
 }
